--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             .max-sm-team-heading {
                 max-width: 210px !important;
             }
+            .max-sm-center{
+                text-align: center !important;
+            }
 
         }
     </style>
@@ -204,11 +207,11 @@
                                                         </tr>
                                                         <tr class="d-grid">
                                                             <td>
-                                                                <p class="pb-5 text-center fs-18"
+                                                                <p class="pb-5 max-sm-center fs-18"
                                                                     style="font-weight: 500; font-size: 16px; text-align: start;  padding-bottom: 8px; opacity: 80% !important;">
                                                                     Take the 7-minute science-based assessment.</p>
                                                                 <p style="max-width: 420px; text-align: start; line-height: 150% !important;  font-size: 14px; padding: 0 0 20px;  opacity: 80% !important;"
-                                                                    class="fs-12 text-center">
+                                                                    class="fs-12 max-sm-center">
                                                                     An overview video introducing Rivet and what’s to
                                                                     come displays when you click the link.</p>
                                                                 <a style="text-decoration: none;" href="/">
@@ -240,11 +243,11 @@
                                                         </tr>
                                                         <tr class="d-grid">
                                                             <td>
-                                                                <p class="pb-5 text-center fs-18"
+                                                                <p class="pb-5 max-sm-center fs-18"
                                                                     style="font-weight: 500; font-size: 16px; text-align: start;  padding-bottom: 8px; opacity: 80% !important;">
                                                                     Connect</p>
                                                                 <p style="max-width: 420px; text-align: start; line-height: 150% !important;  font-size: 14px; padding: 0 0 20px; opacity: 80% !important;"
-                                                                    class="fs-12 text-center">
+                                                                    class="fs-12 max-sm-center">
                                                                     The Rivet connection algorithm will automatically
                                                                     connect you with one fellow (attendees, members,
                                                                     coworkers, etc.) and you will be introduced via
