--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
                                                                                             <tr>
                                                                                                 <td
                                                                                                     style="background-color: #FBBF51; padding: 10px 10px 16px; border: 2px solid black; border-top: 0;">
-                                                                                                    <p
-                                                                                                        style="font-weight: 600; line-height: 150%; padding: 0;">
+                                                                                                    <p class="max-sm-center"
+                                                                                                        style="font-weight: 600; line-height: 150%; padding: 0; text-align: start;">
                                                                                                         Gord Moyer</p>
-                                                                                                    <p
-                                                                                                        style="font-size: 14px; padding: 0 0 10px;">
+                                                                                                    <p class="max-sm-center"
+                                                                                                        style="font-size: 14px; padding: 0 0 10px; text-align: start;">
                                                                                                         Conference
                                                                                                         Attendee & Rivet
                                                                                                         User</p>
-                                                                                                    <p
-                                                                                                        style="max-width: 257px; font-size: 14px;">
+                                                                                                    <p class="max-sm-center"
+                                                                                                        style="max-width: 257px; font-size: 14px; text-align: start;">
                                                                                                         “Rivet helped me
                                                                                                         discover a
                                                                                                         genuine &
@@ -420,16 +420,16 @@
                                                                                             <tr>
                                                                                                 <td
                                                                                                     style="background-color: #FBBF51; padding: 10px 10px 49px; border: 2px solid black; border-top: 0;">
-                                                                                                    <p
-                                                                                                        style="font-weight: 600; line-height: 150%; padding: 0;">
+                                                                                                    <p class="max-sm-center"
+                                                                                                        style="font-weight: 600; line-height: 150%; padding: 0; text-align: start;">
                                                                                                         Tiffany Quast
                                                                                                     </p>
-                                                                                                    <p
-                                                                                                        style="font-size: 14px; padding: 0 0 10px;">
+                                                                                                    <p class="max-sm-center"
+                                                                                                        style="font-size: 14px; padding: 0 0 10px; text-align: start;">
                                                                                                         Senior Director
                                                                                                         at Walmart</p>
-                                                                                                    <p
-                                                                                                        style="max-width: 257px; font-size: 14px;">
+                                                                                                    <p class="max-sm-center"
+                                                                                                        style="max-width: 257px; font-size: 14px; text-align: start;">
                                                                                                         “Rivet is
                                                                                                         amazing! A turn
                                                                                                         key experience
