--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                                                                             </tr>
                                                                                             <tr>
                                                                                                 <td
-                                                                                                    style="background-color: #FBBF51; padding: 10px 10px 49px; border: 2px solid black; border-top: 0;">
+                                                                                                    style="background-color: #BEE2E9; padding: 10px 10px 49px; border: 2px solid black; border-top: 0;">
                                                                                                     <p class="max-sm-center"
                                                                                                         style="font-weight: 600; line-height: 150%; padding: 0; text-align: start;">
                                                                                                         Tiffany Quast
