--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                         <table cellpadding="0" cellspacing="0" border="0" style="width: 100%">
                                             <tr>
                                                 <td style="text-align:center;">
-                                                    <h1 style="font-weight: 800; width: 100%; max-width: 367px; font-size: 28px; line-height: 130% !important; color: black; padding-bottom: 29px;"
+                                                    <h1 style="font-weight: 800; width: 100%; max-width: 367px; opacity: 80%; font-size: 28px; line-height: 130% !important; color: black; padding-bottom: 29px;"
                                                         class=" mx-auto  text-center fs-20 pb-12">
                                                         Here’s what you’ll need to do
                                                     </h1>
@@ -208,7 +208,7 @@
                                                         <tr class="d-grid">
                                                             <td>
                                                                 <p class="pb-5 max-sm-center fs-18"
-                                                                    style="font-weight: 500; font-size: 16px; text-align: start;  padding-bottom: 8px; opacity: 80% !important;">
+                                                                    style="font-weight: 500; font-size: 20px; text-align: start;  padding: 10px 0; opacity: 80% !important;">
                                                                     Take the 7-minute science-based assessment.</p>
                                                                 <p style="max-width: 420px; text-align: start; line-height: 150% !important;  font-size: 14px; padding: 0 0 20px;  opacity: 80% !important;"
                                                                     class="fs-12 max-sm-center">
@@ -244,7 +244,7 @@
                                                         <tr class="d-grid">
                                                             <td>
                                                                 <p class="pb-5 max-sm-center fs-18"
-                                                                    style="font-weight: 500; font-size: 16px; text-align: start;  padding-bottom: 8px; opacity: 80% !important;">
+                                                                    style="font-weight: 500; font-size: 20px; text-align: start;  padding: 10px 0; opacity: 80% !important;">
                                                                     Connect</p>
                                                                 <p style="max-width: 420px; text-align: start; line-height: 150% !important;  font-size: 14px; padding: 0 0 20px; opacity: 80% !important;"
                                                                     class="fs-12 max-sm-center">
