--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 height: 40px !important;
             }
 
-            .join-btn-padding {
+            .start-btn-padding {
                 padding: 10px 14px !important;
             }
 
@@ -75,6 +75,9 @@
             .fs-24 {
                 font-size: 24px !important;
             }
+            .fs-36{
+                font-size: 36px !important;
+            }
 
             .connecting-sec-spacing {
                 padding: 40px 24px !important;
@@ -93,6 +96,12 @@
             }
             .max-sm-center{
                 text-align: center !important;
+            }
+            .eye-logo{
+                max-width: 40px !important;
+            }
+            .card-2-spacing{
+                padding: 20px 20px 10px !important;
             }
 
         }
@@ -158,7 +167,7 @@
                                                 <td style=" text-align: center; padding-bottom: 40px;">
                                                     <a style="text-decoration: none; " href="/">
                                                         <p style=" max-width:max-content; padding: 16px 20px; background-color: #B9E0EA; line-height: 150%; border-radius: 100px; color: #000000; font-weight: 500; font-size: 16px; "
-                                                            class="mx-auto fs-12 join-btn-padding">Get Started Now</p>
+                                                            class="mx-auto fs-12 start-btn-padding">Get Started Now</p>
                                                     </a>
                                                 </td>
                                             </tr>
@@ -195,28 +204,28 @@
                                                         style="width: 100%; background-color: #FBBF51; padding: 20px 20px 30px;  border: 2px solid black;">
                                                         <tr>
                                                             <td style="text-align: start;">
-                                                                <img style="max-width: 50px;"
+                                                                <img style="max-width: 50px;" class="eye-logo"
                                                                     src="https://i.postimg.cc/Njmc0SfJ/icon-1-traced.png"
                                                                     alt="eye img">
                                                             </td>
                                                             <td style="text-align: end;">
-                                                                <p
+                                                                <p class="fs-36"
                                                                     style="font-size: 40px; max-width: 46px; margin-left: auto; text-align: end; font-weight: 600; opacity: 20%; padding: 0;">
                                                                     01</p>
                                                             </td>
                                                         </tr>
                                                         <tr class="d-grid">
                                                             <td>
-                                                                <p class="pb-5 max-sm-center fs-18"
+                                                                <p class="pb-5 fs-18"
                                                                     style="font-weight: 500; font-size: 20px; text-align: start;  padding: 10px 0; opacity: 80% !important;">
                                                                     Take the 7-minute science-based assessment.</p>
                                                                 <p style="max-width: 420px; text-align: start; line-height: 150% !important;  font-size: 14px; padding: 0 0 20px;  opacity: 80% !important;"
-                                                                    class="fs-12 max-sm-center">
+                                                                    class="fs-12">
                                                                     An overview video introducing Rivet and what’s to
                                                                     come displays when you click the link.</p>
                                                                 <a style="text-decoration: none;" href="/">
                                                                     <p style=" max-width:max-content; padding: 16px 20px; background-color: #fff; color: #000000; line-height: 150%; border-radius: 100px; font-weight: 500; font-size: 16px; "
-                                                                        class="fs-12 join-btn-padding max-sm-mx-auto">
+                                                                        class="fs-12 start-btn-padding">
                                                                         Click Here</p>
                                                                 </a>
                                                             </td>
@@ -227,27 +236,27 @@
                                             </tr>
                                             <tr>
                                                 <td class="text-center">
-                                                    <table cellpadding="0" cellspacing="0" border="0"
+                                                    <table cellpadding="0" cellspacing="0" border="0" class="card-2-spacing"
                                                         style="width: 100%; background-color: #B9E0EA; padding: 20px 20px 30px; border: 2px solid black;">
                                                         <tr>
                                                             <td style="text-align: start;">
-                                                                <img style="max-width: 50px;"
+                                                                <img style="max-width: 50px;" class="eye-logo"
                                                                     src="https://i.postimg.cc/fW2R9G7B/hand.png"
                                                                     alt="eye img">
                                                             </td>
                                                             <td>
-                                                                <p
+                                                                <p class="fs-36"
                                                                     style="font-size: 40px; font-weight: 600; opacity: 20%; padding: 0;">
                                                                     02</p>
                                                             </td>
                                                         </tr>
                                                         <tr class="d-grid">
                                                             <td>
-                                                                <p class="pb-5 max-sm-center fs-18"
+                                                                <p class="pb-5 fs-18"
                                                                     style="font-weight: 500; font-size: 20px; text-align: start;  padding: 10px 0; opacity: 80% !important;">
                                                                     Connect</p>
                                                                 <p style="max-width: 420px; text-align: start; line-height: 150% !important;  font-size: 14px; padding: 0 0 20px; opacity: 80% !important;"
-                                                                    class="fs-12 max-sm-center">
+                                                                    class="fs-12">
                                                                     The Rivet connection algorithm will automatically
                                                                     connect you with one fellow (attendees, members,
                                                                     coworkers, etc.) and you will be introduced via
@@ -295,10 +304,10 @@
                                                                                                     style="line-height: 0; color: white; font-weight: 800; font-size: 32px; line-height: 120% !important; padding-bottom: 30px; max-width: 435px; text-align: center;">
                                                                                                     Rivet users
                                                                                                     experience a 140%
-                                                                                                    increase in
-                                                                                                    “feelings of
-                                                                                                    connection to
-                                                                                                    others.”
+                                                                                                    increase in 
+                                                                                                    <span style="font-style: italic;">“feelings of
+                                                                                                        connection to
+                                                                                                        others.”</span>
                                                                                                 </td>
                                                                                             </tr>
                                                                                             <tr>
@@ -307,7 +316,7 @@
                                                                                                     <a style="text-decoration: none; "
                                                                                                         href="/">
                                                                                                         <p style=" max-width:max-content; padding: 16px 20px; background-color: #B9E0EA; line-height: 150%; border-radius: 100px; color: #000000; font-weight: 500; font-size: 16px; "
-                                                                                                            class="mx-auto fs-12 join-btn-padding">
+                                                                                                            class="mx-auto fs-12 start-btn-padding">
                                                                                                             Get Started
                                                                                                             Now</p>
                                                                                                     </a>
@@ -384,7 +393,7 @@
                                                                                                         Conference
                                                                                                         Attendee & Rivet
                                                                                                         User</p>
-                                                                                                    <p class="max-sm-center"
+                                                                                                    <p class="max-sm-center max-sm-mx-auto"
                                                                                                         style="max-width: 257px; font-size: 14px; text-align: start;">
                                                                                                         “Rivet helped me
                                                                                                         discover a
@@ -428,7 +437,7 @@
                                                                                                         style="font-size: 14px; padding: 0 0 10px; text-align: start;">
                                                                                                         Senior Director
                                                                                                         at Walmart</p>
-                                                                                                    <p class="max-sm-center"
+                                                                                                    <p class="max-sm-center max-sm-mx-auto"
                                                                                                         style="max-width: 257px; font-size: 14px; text-align: start;">
                                                                                                         “Rivet is
                                                                                                         amazing! A turn
@@ -531,7 +540,7 @@
                                                                     getting these emails, please add</span> <span><a
                                                                         href="/"
                                                                         style="text-decoration: none; opacity: 100% !important; color: #fff; font-weight: 600;"
-                                                                        class="fs-18"> hello@WorkRivet.com </a></span>
+                                                                        class="fs-16"> hello@WorkRivet.com </a></span>
                                                             </p>
                                                         </td>
                                                     </table>
